--- a/main.html
+++ b/main.html
@@ -7,7 +7,42 @@
 </head>
 
 <body>
+	
 	<!-- the entire body must be written by student -->
+	<form method="POST">
+		<label for="name">Name*</label>
+		<input type="text" id="name" name="name" required>
+
+		<label for="email">Email*</label>
+		<input type="email" id="email" name="email" required>
+
+		<label>Gender*</label>
+		<input type="radio" id="gender_m" name="gender" required>
+		<label for="gender_m">Male</label>
+		<input type="radio" id="gender_f" name="gender" required>
+		<label for="gender_f">Female</label>
+
+		<label for="laptop">Laptop Brands*</label>
+		<select name="laptop" id="laptop">
+			<option value="Apple">Apple</option>
+			<option value="Asus">Asus</option>
+			<option value="HP">HP</option>
+		</select>
+		
+		<label for="age">Age*</label>
+		<input type="number" id="age" name="age" required>
+
+		<label for="dob">DOB*</label>
+		<input type="date" id="dob" name="dob" required>
+
+		<label for="portfolio">Portfolio*</label>
+		<input type="url" id="portfolio" name="portfolio">
+		
+		<label for="password">Password*</label>
+		<input type="password" id="password" name="password" required>
+
+		<button type="submit">Submit</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
